--- a/index.html
+++ b/index.html
@@ -10,8 +10,39 @@
       <link rel="stylesheet" href="css/style.css"/>
       <link rel="stylesheet" href="css/animate.css"/>
 	  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900|Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-      
+
 </head>
 <body>
+  <!-- Start  Loading Section -->
+  <div class="loading-overlay">
+      <div class="spinner">
+          <div class="double-bounce1"></div>
+          <div class="double-bounce2"></div>
+      </div>
+  </div>
+
+  <!-- start header -->
+    <header id="pageHeader" class="header navbar">
+           <div class="container">
+               <div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Fitsum</a>
+               </div>
+               <nav id="myNavbar" class="navbar-collapse collapse">
+				    <ul class="nav navbar-nav">
+						<li><a href="#logo">Logo</a></li>
+						<li><a href="#about">ABOUT</a></li>
+						<li><a href="#services">SERVICES</a></li>
+						<li><a href="#packages">PACKAGES & PRIICING</a></li>
+						<li><a href="#contact">CONTACT</a></li>
+					</ul>
+               </nav>
+           </div>
+    </header>
+    <!-- end header -->
 </body>
 </html>
