--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Fitsum</a>
+					<a class="navbar-brand" href="#">CryptoConsultz</a>
                </div>
                <nav id="myNavbar" class="navbar-collapse collapse">
 				    <ul class="nav navbar-nav">
