--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                </div>
                <nav id="myNavbar" class="navbar-collapse collapse">
 				    <ul class="nav navbar-nav">
-						<li><a href="#logo">Logo</a></li>
+						<li><a href="#home">Logo</a></li>
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#services">SERVICES</a></li>
 						<li><a href="#packages">PACKAGES & PRIICING</a></li>
@@ -44,5 +44,59 @@
            </div>
     </header>
     <!-- end header -->
+
+    <section id="contact" class="contact">
+        <div class="container">
+            <h1 class="heading">Contact <span>Me</span></h1>
+			<div class="row">
+                <div class="col-sm-6">
+                    <div class="item">
+                        <i class="fa fa-phone"></i>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="item">
+                        <i class="fa fa-envelope"></i>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="item">
+                        <i class="fa fa-map-marker"></i>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-offset-2 col-md-8 col-sm-12">
+                    <div class="contact-form">
+                        <form id="contact-form"action="MAILTO:" method="post"enctype="text/plain">
+                             <div class="row">
+                                 <div class="form-group col-md-12">
+                                     <input type="text" name="name" class="form-control"  placeholder="Name" required="required">
+                                 </div>
+                                 <div class="form-group col-sm-6">
+                                     <input type="email" name="email" class="form-control"  placeholder="Email" required="required">
+                                 </div>
+                                 <div class="form-group col-sm-6">
+                                     <input type="text" name="subject" class="form-control"  placeholder="subject" required="required">
+                                 </div>
+                                 <div class="form-group col-md-12">
+                                     <textarea rows="6" name="message" class="form-control"  placeholder="Your Message" required="required"></textarea>
+                                 </div>
+                                 <div class="col-md-12">
+                                     <div>
+                                         <input type="submit" value="submit now" name="submit" title="Submit Your Message!">
+                                     </div>
+                                 </div>
+                             </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end section contact -->
 </body>
 </html>
