--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="contact" class="contact">
         <div class="container">
-            <h1 class="heading">Contact <span>Me</span></h1>
+            <h1 class="heading">Contact <span>Us</span></h1>
 			<div class="row">
                 <div class="col-sm-6">
                     <div class="item">
