--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                </div>
                <nav id="myNavbar" class="navbar-collapse collapse">
 				    <ul class="nav navbar-nav">
-						<li><a href="#home">Logo</a></li>
+						<li><a href="#home">LOGO</a></li>
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#services">SERVICES</a></li>
 						<li><a href="#packages">PACKAGES & PRIICING</a></li>
@@ -98,5 +98,14 @@
         </div>
     </section>
     <!-- end section contact -->
+        <!-- footer start here -->
+    <div class="social-icon-div">
+        <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-google-plus"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <p>Copyright © 2018 CryptoConsultz | All Rights Reserved.</p>
+    </div>
+    <!-- end footer -->
 </body>
 </html>
