--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <!-- First Mobile Meta -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Crypto Consultz</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href="css/style.css"/>
       <link rel="stylesheet" href="css/animate.css"/>
 	  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900|Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
