--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <header id="pageHeader" class="header navbar">
            <div class="container">
                <div class="navbar-header">
-					<!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-					</button> -->
+					</button>
 					<a class="navbar-brand" href="#">CryptoConsultz</a>
                </div>
                <nav id="myNavbar" class="navbar-collapse collapse">
@@ -110,13 +110,10 @@
     </section>
     <!-- end section contact -->
         <!-- footer start here -->
-    <div class="social-icon-div">
-        <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-google-plus"></i></a>
-        <a href="#"><i class="fa fa-instagram"></i></a>
-        <p>Copyright © 2018 CryptoConsultz | All Rights Reserved.</p>
-    </div>
+        <!--Footer-->
+        <div class="footer">
+                <p>Copyright © 2018 CryptoConsultz | All Rights Reserved</p>
+        </div>
     <!-- end footer -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
