--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <header id="pageHeader" class="header navbar">
            <div class="container">
                <div class="navbar-header">
-					<!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-					</button> -->
+					</button>
 					<a class="navbar-brand" href="#">CryptoConsultz</a>
                </div>
                <nav id="myNavbar" class="navbar-collapse collapse">
