--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- start header -->
-    <header id="pageHeader" class="header navbar">
+    <header id="pageHeader" class="header navbar navbar-fixed-top">
            <div class="container">
                <div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
