--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       <!--CSS files links-->
       <link rel="stylesheet" href="css/style.css"/>
       <link rel="stylesheet" href="css/animate.css"/>
+
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
       <!-- Navbar font -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300" rel="stylesheet">
 
@@ -28,38 +30,59 @@
           </div>
       </div>
 
-  <!-- start header -->
-    <header id="pageHeader" class="header navbar navbar-fixed-top">
-           <div class="container">
-               <div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#">CryptoConsultz</a>
-               </div>
-               <nav id="myNavbar" class="navbar-collapse collapse">
-				    <ul class="nav navbar-nav">
-						<li><a href="#home">LOGO</a></li>
-						<li><a href="#about">ABOUT</a></li>
-						<li><a href="#services">SERVICES</a></li>
-						<li><a href="#packages">PACKAGES & PRIICING</a></li>
-						<li><a href="#contact">CONTACT</a></li>
-					</ul>
-               </nav>
-           </div>
-    </header>
-    <!-- end header -->
- <!-- jumbotron-fluid start here -->
-    <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-  </div>
-</div>
-<!-- end jumbotron-fluid -->
-      <!-- contact start here -->
+    <!-- start Navbar -->
+           <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                    <a class="navbar-brand" href="#">
+                    <img src="./css/Images/logo.png">
+                    <a class="navbar-brand" href="#">CryptoConsultz</a>
+                </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">packages & pricing</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
+                  
+                <!-- Right Side -->  
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></a></li>
+                    <li class="dropdown">
+                      <a href="#" class="glyphicon glyphicon-user" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Logout</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Sign Up</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container-fluid -->
+            </nav>
+    <!-- end Navbar -->
+
+    <!-- jumbotron-fluid start here -->
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4">Fluid jumbotron</h1>
+                    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+            </div>
+    <!-- end jumbotron-fluid -->
+
+    <!-- contact start here -->
     <section id="contact" class="contact">
         <div class="container">
             <h1 class="heading">Contact <span>Us</span></h1>
@@ -113,12 +136,14 @@
         </div>
     </section>
     <!-- end section contact -->
-        <!-- footer start here -->
-        <!--Footer-->
+
+    <!-- footer start here -->
+    <!--Footer-->
         <div class="footer">
                 <p>Copyright © 2018 CryptoConsultz | All Rights Reserved</p>
         </div>
     <!-- end footer -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
