--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    <a class="navbar-brand" href="#">
+                    <a id="logo" class="navbar-brand" href="#">
                     <img src="./css/Images/logo.png">
                     <a class="navbar-brand" href="#">CryptoConsultz</a>
                 </div>
