--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!-- footer start here -->
     <!--Footer-->
         <div class="footer">
-                <p>Copyright © 2018 CryptoConsultz | All Rights Reserved</p>
+                <p>Copyright © 2018 CryptoConsultz, LLC | All Rights Reserved</p>
         </div>
     <!-- end footer -->
 
