--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
                 <div class="col-sm-6">
                     <div class="item">
                         <i class="fa fa-phone"></i>
-                        <p></p>
+                        <p>(+1xxx)xxx-xxxx</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="item">
                         <i class="fa fa-envelope"></i>
-                        <p></p>
+                        <p>CryptoConsultz@CryptoConsultz.com</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="item">
                         <i class="fa fa-map-marker"></i>
-                        <p></p>
+                        <p>Adress</p>
                     </div>
                 </div>
             </div>
