--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 
       <!--CSS files links-->
       <link rel="stylesheet" href="css/style.css"/>
-      <link rel="stylesheet" href="css/animate.css"/>
+      <!-- <link rel="stylesheet" href="css/animate.css"/> -->
 
       <!-- Latest compiled and minified CSS -->
       <!-- Bootstrap -->
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
       <!-- Navbar font -->
@@ -26,8 +23,8 @@
       <!-- Optional theme -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
       <!-- favicon -->
-      <!-- <link rel="shortcut icon" type="image/png" href="/favicon.png"/> -->
-      <link rel="shortcut icon" type="image/png" href="http://eg.com/favicon.png"/>
+      <link rel="favicon.icon" type="image/png" href="/favicon.png"/>
+      <link rel="favicon.icon" type="image/png" href="http://eg.com/favicon.png"/>
 
     </head>
     <body>
@@ -147,16 +144,6 @@
     <!-- end section contact -->
 
     <!-- footer start here -->
-    <!--Footer-->
-        <!-- <div class="footer">
-                <p>Copyright © 2018 CryptoConsultz | All Rights Reserved</p>
-                <div class="col-sm-4">
-                    <div class="item">
-                        <i class="fa fa-map-marker"></i>
-                        <p></p>
-                    </div>
-                </div>
-        </div> -->
   <footer>
     <div class="footer" id="footer">
         <div class="container">
@@ -221,9 +208,7 @@
     <!--/.footer-bottom-->
 </footer>
     <!-- end footer -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 </html>
