--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <!-- Optional theme -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
       <!-- favicon -->
-      <link rel="favicon.icon" type="image/png" href="/favicon.png"/>
-      <link rel="favicon.icon" type="image/png" href="http://eg.com/favicon.png"/>
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <!-- <link rel="shortcut icon" type="image/png" href="http://eg.com/favicon.png"/> -->
 
     </head>
     <body>
