--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 
     <div class="footer-bottom">
         <div class="container">
-            <p class="pull-left"> Copyright © CryptoConsultz 2018 | All right reserved. </p>
-            <div class="pull-right">
+            <p class="pull-center"> Copyright © CryptoConsultz 2018 | All right reserved. </p>
+            <!-- <div class="pull-right">
                 <ul class="nav nav-pills payments">
                 	<li><i class="fa fa-cc-visa"></i></li>
                     <li><i class="fa fa-cc-mastercard"></i></li>
@@ -203,7 +203,7 @@
                     <li><i class="fa fa-cc-paypal"></i></li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
     <!--/.footer-bottom-->
 </footer>
