--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                    <h3> Telephone </h3>
+                    <ul>
+                        <li> <a href="#">+1 (360)-601-8800</a> </li>
+                    </ul>
+                </div>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                    <h3> Email </h3>
+                    <ul>
+                        <li> <a href="#">cryptoconsultz@protonmail.com</a> </li>
+                    </ul>
+                </div>
+                <!-- <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                     <h3> Lorem Ipsum </h3>
                     <ul>
                         <li> <a href="#"> Lorem Ipsum </a> </li>
@@ -161,21 +173,7 @@
                         <li> <a href="#"> Lorem Ipsum </a> </li>
                         <li> <a href="#"> Lorem Ipsum </a> </li>
                     </ul>
-                </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> Lorem Ipsum </h3>
-                    <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                    </ul>
-                </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> Lorem Ipsum </h3>
-                    <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                    </ul>
-                </div>
+                </div> -->
                 <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
                     <ul class="social">
                         <li> <a href="#"> <i class="fa fa-facebook">   </i> </a> </li>
