--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
             <!-- Start Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light">
 
                 <a class="navbar-brand" href="#">
                 <img src="./css/Images/logo.png" width="46" height=50 class="d-inline-block align-top" >
