--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
     <div class="footer" id="footer">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3  col-md-2 col-sm-12 col-xs-6">
-                <h3> CryptoConsultz, LLC </h3>
-            </div> 
-            <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
+
+            <div class="col-6"><h3> CryptoConsultz, LLC </h3></div>
+
+            <div class="col-6">
                     <ul class="social">
                         <li> <a href="#"> <i class="fa fa-facebook">   </i> </a> </li>
                         <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
