--- a/index.html
+++ b/index.html
@@ -301,11 +301,10 @@
             </div>
             <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
                     <ul class="social">
-                        <li> <a href="#"> <i class="fa fa-facebook">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-instagram">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                        <li> <a href="#"> <i class="icon ion-social-facebook"></i>   </i> </a> </li>
+                        <li> <a href="#"> <i class="icon ion-social-twitter"></i>  </i> </a> </li>
+                        <li> <a href="#"> <i class="icon ion-social-instagram"></i>  </i> </a> </li>
+                        <li> <a href="#"> <i class="icon ion-social-youtube"></i>   </i> </a> </li>
                     </ul>
                 </div>
           </div>
