--- a/index.html
+++ b/index.html
@@ -296,30 +296,34 @@
     <div class="footer" id="footer">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-2 col-sm-12 col-xs-6">
-                <h3> CryptoConsultz, LLC </h3>
-            </div>
-            <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-                    <ul class="social">
+            <!-- <div class="row"> -->
+          <div class="col"><h3> CryptoConsultz, LLC </h3></div>
+          <div class="col">
+              <ul class="social">
                         <li> <a href="#"> <i class="icon ion-social-facebook"></i>   </i> </a> </li>
                         <li> <a href="#"> <i class="icon ion-social-twitter"></i>  </i> </a> </li>
                         <li> <a href="#"> <i class="icon ion-social-instagram"></i>  </i> </a> </li>
                         <li> <a href="#"> <i class="icon ion-social-youtube"></i>   </i> </a> </li>
                     </ul>
-                </div>
           </div>
+        </div>
+
             <div class="row">
-                <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
+              <div class="col">
                     <div class="pnone-icon">
-                        <li> <a href="#"> <i class="fa fa-phone"></i> </a></li>
+                        <a href="#"> <i class="icon ion-ios-telephone"></i> +1 (360)-601-8800</a>
                     </div>
-                </div>
-                <div class="phone">
-                    +1 (360)-601-8800
-                </div>
-                    <div class="col-lg-3  col-md-2 col-sm-4 col-xs-6">
-                        <li> <a> <i class="fa fa-envelope"> <span> </span> cryptoconsultz@protonmail.com </i> </a> </li>
-                    </div>
+              </div>
+
+              <div class="col">
+                <a> <i class="icon ion-ios-email"> <span> </span> cryptoconsultz@protonmail.com </i> </a> 
+              </div>
+              <div class="col"></div>
+              <div class="col"></div>
+            </div>
+
+          </div>
+            
                 <!-- <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                     <h3> Lorem Ipsum </h3>
                     <ul>
