--- a/index.html
+++ b/index.html
@@ -305,12 +305,13 @@
           <div class="row">
             <div class="col">
                 <div class="pnone-icon">
-                    <a href="#"> <i class="icon ion-ios-telephone"></i> +1 (360)-601-8800</a>
+                    <a> <i class="icon ion-ios-telephone"></i> +1 (360)-601-8800</a>
                   </div>
               </div>
 
             <div class="col">
-                <a> <i class="icon ion-ios-email"> <span> </span> cryptoconsultz@protonmail.com </i> </a> 
+                <a> <i class="icon ion-ios-email"> cryptoconsultz@protonmail.com</i> </a> 
+                <br>
             </div> 
 
           <!-- future -->
@@ -319,12 +320,10 @@
           </div>
           </div>
 
-          <p></p>
-
-
           <div class="row">
-            <div class="col"></div>
-              <div class="col-8">
+              <div class="col-sm-1"></div>
+              <div class="col-sm-10">
+                <br>
                 <p>Information provided through informational consulting sessions is for informational purposes only and should not be considered legal or financial advice.</p>  
                 <p>You should consult with an attorney or other professional to determine what may be best for your individual needs.</p>  
                 <p>CryptoConsultz, LLC does not make any guarantee or other promise as to any results that may be obtained from using this service.</p> 
@@ -332,8 +331,9 @@
                 <p>To the maximum extent permitted by law, CryptoConsultz, LLC disclaims any and all liability in the event any information, commentary, analysis, opinions, advice and/or recommendations prove to be inaccurate, incomplete or unreliable, or result in any investment or other losses.</p>
               
                 <p>Your use of the information provided or materials is at your own risk.</p>
+              </div>  
               </div>
-              <div class="col"></div>
+              
             </div>  
               </div>
             </div>
