--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
           <div class="col"><h3> CryptoConsultz, LLC </h3></div>
             <div class="col">
               <ul class="social">
-                  <li> <a href="#"> <i class="icon ion-social-facebook"></i>   </i> </a> </li>
-                  <li> <a href="#"> <i class="icon ion-social-twitter"></i>  </i> </a> </li>
-                  <li> <a href="#"> <i class="icon ion-social-instagram"></i>  </i> </a> </li>
-                  <li> <a href="#"> <i class="icon ion-social-youtube"></i>   </i> </a> </li>
+                  <li> <a href="#"> <i class="icon ion-social-facebook"></i> </i> </a> </li>
+                  <li> <a href="https://twitter.com/?lang=en"> <i class="icon ion-social-twitter"></i> </i> </a> </li>
+                  <li> <a href="https://www.instagram.com/coinconsultz/?hl=en"> <i class="icon ion-social-instagram"></i> </i> </a> </li>
+                  <li> <a href="#"> <i class="icon ion-social-youtube"></i> </i> </a> </li>
                </ul>
             </div>
           </div>
