--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
                         <!-- Left side -->
                         <a class="nav-link" href="#" >
-                          <i class="icon ion-ios-cart"></i></a>
+                          <i class="icon ion-ios-cart" id="icon"></i></a>
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="icon ion-person"></i>
+                            <i class="icon ion-person" id="icon"></i>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Login</a>
@@ -294,10 +294,10 @@
           <div class="col"><h3> CryptoConsultz, LLC </h3></div>
             <div class="col">
               <ul class="social">
-                  <li> <a href="#"> <i class="icon ion-social-facebook"></i> </i> </a> </li>
-                  <li> <a href="https://twitter.com/?lang=en"> <i class="icon ion-social-twitter"></i> </i> </a> </li>
-                  <li> <a href="https://www.instagram.com/coinconsultz/?hl=en"> <i class="icon ion-social-instagram"></i> </i> </a> </li>
-                  <li> <a href="#"> <i class="icon ion-social-youtube"></i> </i> </a> </li>
+                  <li> <a href="#"> <i class="icon ion-social-facebook" id="icon-footer"></i> </i> </a> </li>
+                  <li> <a href="https://twitter.com/?lang=en"> <i class="icon ion-social-twitter" id="icon-footer"></i> </i> </a> </li>
+                  <li> <a href="https://www.instagram.com/coinconsultz/?hl=en"> <i class="icon ion-social-instagram" id="icon-footer"></i> </i> </a> </li>
+                  <li> <a href="#"> <i class="icon ion-social-youtube" id="icon-footer"></i> </i> </a> </li>
                </ul>
             </div>
           </div>
