--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               </div>
 
             <div class="col">
-                <a> <i class="icon ion-ios-email"> cryptoconsultz@protonmail.com</i> </a> 
+                <a> <i class="ion-android-mail"> cryptoconsultz@protonmail.com</i> </a> 
                 <br>
             </div> 
 
