--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <meta charset="utf-8"/>
- <!-- IE Compatibility Meta -->
+       <!-- Required meta tags -->
+       <meta charset="utf-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <!-- <meta charset="utf-8"/> -->
+      <!-- IE Compatibility Meta -->
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- First Mobile Meta -->
+      <!-- First Mobile Meta -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Crypto Consultz</title>
 
@@ -12,23 +15,17 @@
       <link rel="stylesheet" href="css/style.css"/>
       <!--IonIcons-CSS files links-->
       <link rel="stylesheet" href="css/ionicons.css"/>
-      <!-- <link rel="stylesheet" href="css/animate.css"/> -->
-
-      <!-- Latest compiled and minified CSS -->
       <!-- Bootstrap -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
       <!-- Navbar font -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300" rel="stylesheet">
-
       <!-- Optional theme -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
       <!-- favicon -->
       <link rel="shortcut icon" href="fevicon.png" type="image/x-icon">
-
     </head>
     <body>
+
       <!-- Start  Loading Section -->
       <div class="loading-overlay">
           <div class="spinner">
@@ -72,7 +69,7 @@
                             <i class="icon ion-person"></i>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Login</a>
+                              <a class="dropdown-item" href="#exampleModal" data-toggle="modal" data-target="#" data-whatever="@mdo">Login</a>
                               <!-- Modal -->
                               <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
@@ -316,14 +313,14 @@
               </div>
 
               <div class="col">
-                <a> <i class="icon ion-ios-email"> <span> </span> cryptoconsultz@protonmail.com </i> </a> 
+                <a> <i class="icon ion-ios-email"> <span> </span> cryptoconsultz@protonmail.com </i> </a>
               </div>
               <div class="col"></div>
               <div class="col"></div>
             </div>
 
           </div>
-            
+
                 <!-- <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                     <h3> Lorem Ipsum </h3>
                     <ul>
@@ -361,11 +358,17 @@
     <!--/.footer-bottom-->
 </footer>
     <!-- end footer -->
-
     <!-- Script -->
+    <script>
+      $('#exampleModal').on('shown.bs.modal', function () {
+      $('#myInput').trigger('focus')
+     })
+   </script>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
