--- a/index.html
+++ b/index.html
@@ -110,33 +110,45 @@
                 </div>
             <!-- End jumbotron-fluid -->
 
-            <!-- About Us -->
-            <div class="col-md-12">
-                <div class="row">
-                <div class="card">
-                        <div class="card-header">
-                            <h5 class="About-line">Diversify your investment profile by investing in cryptocurrency.</h5>
+            <!-- ====== Start About ======  -->
+              <section class="about section-padding" id='about'>
+                <div class="container">
+                  <div class="row justify-content-center">
+
+                    <div class="col-lg-4 col-md-6 photo sm-mb-50">
+                      <img src="http://via.placeholder.com/350x600" alt="">
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 hero">
+                      <div class="info mb-20">
+                        <!-- Title -->
+                        <div class="title mb-50">
+                          <h4 class="title"><span>About </span>Us</h4>
                         </div>
-                            <div class="card-body">
-                                <h6 class="card-title">Navigating the rapidly evolving cryptocurrency market can be confusing, challenging and risky without the help of a cryptocurrency consultant. CryptoConsultz provides support for all levels of crypto-curious investors.
-                                </h6>
-                                <p class="card-text">
-                                    Benefits of a CryptoConsultant:
-                                <li>Understand blockchain technology and the cryptocurrency market.</li>
-                                <li>Setup online cryptocurrency accounts.</li>
-                                <li>Create your secure cryptowallet.</li>
-                                <li>Learn how to protect your investment using the most effective security devices and strategies.</li>
-                                <li>Stay up to date on new currencies and ICOs.</li>
-                                <li>Learn about cryptocurrency mining.</li>
-                                <li>Learn how to purchase, trade and sell funds.</li>
-                                <li>Keep your funds safe and secure, away from hackers.</li>
-                                <li>Decipher the hype from coins with long-term potential.</li>
-                                </p>
-                            </div>
+
+                        <h6 class="mb-20"></h6>
+
+                            <h6>Navigating the rapidly evolving cryptocurrency market can be confusing, challenging and risky without the help of a cryptocurrency consultant. CryptoConsultz provides support for all levels of crypto-curious investors.
+                            </h6>
+                            <p class="card-text">
+                                Benefits of a CryptoConsultant:
+                            <li>Understand blockchain technology and the cryptocurrency market.</li>
+                            <li>Setup online cryptocurrency accounts.</li>
+                            <li>Create your secure cryptowallet.</li>
+                            <li>Learn how to protect your investment using the most effective security devices and strategies.</li>
+                            <li>Stay up to date on new currencies and ICOs.</li>
+                            <li>Learn about cryptocurrency mining.</li>
+                            <li>Learn how to purchase, trade and sell funds.</li>
+                            <li>Keep your funds safe and secure, away from hackers.</li>
+                            <li>Decipher the hype from coins with long-term potential.</li>
+                            </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                </div>
-            </div>
-            <!-- End About Us-->
+              </section>
+              <!-- ======./ About ======  -->
 
             <!-- Services -->
             <div class="row">
