--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="row" class="row-1">
                 <div class="col-sm-4 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -211,8 +211,8 @@
 
                 <div class="row" class="row-2"><!--row-2-->
                     <div class="col-sm-4 col-md-4">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card" style="width: 18rem; margin-top:20px;">
+                            <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -221,8 +221,8 @@
                         </div>
                     </div>
                 <div class="col-sm-4 col-md-4">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card" style="width: 18rem; margin-top:20px;">
+                            <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -230,6 +230,16 @@
                                 </div>
                         </div>
                     </div>
+                    <div class="col-sm-4 col-md-4">
+                      <div class="card" style="width: 18rem; margin-top:20px;">
+                          <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                              <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                      </div>
+                 </div>
             </div>
             </div>
             </div>
