--- a/index.html
+++ b/index.html
@@ -144,24 +144,39 @@
               </section>
               <!-- ======./ About ======  -->
 
-            <!-- Services -->
-            <div class="row">
-                <div class="card-body">
-                    <h4 class="card-title">Services</h4>
-                        <div class="Services">
-                        <p class="card-text">
-                            <li>Personal 1 on 1 tutoring/coaching.</li>
-                            <li>Virtual consulting sessions.</li>
-                            <li>On-call telephone support.</li>
-                            <li>Email updates providing the latest updates in cryptocurrrency investing.</li>
-                            <li>Local and virtual cryptocurrency seminars.</li>
-                            <li>Library access to online cryptocurrency resources.</li>
-                            <li>Access a network of professionals in the cryptocurrency industry.</li>
-                        </p>
+            <!-- ====== Start Services ======  -->
+              <section class="about section-padding" id='about'>
+                <div class="container">
+                  <div class="row justify-content-center">
+
+                    <div class="col-lg-4 col-md-6 photo sm-mb-50">
+                      <img src="http://via.placeholder.com/350x600" alt="">
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 hero">
+                      <div class="info mb-20">
+                        <!-- Title -->
+                        <div class="title mb-50">
+                          <h4 class="title"><span>Services </span></h4>
                         </div>
+
+                        <h6 class="mb-20"></h6>
+                            <p class="card-text">
+                              <li>Personal 1 on 1 tutoring/coaching.</li>
+                              <li>Virtual consulting sessions.</li>
+                              <li>On-call telephone support.</li>
+                              <li>Email updates providing the latest updates in cryptocurrrency investing.</li>
+                              <li>Local and virtual cryptocurrency seminars.</li>
+                              <li>Library access to online cryptocurrency resources.</li>
+                              <li>Access a network of professionals in the cryptocurrency industry.</li>
+                            </p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-            </div>
-            <!-- End Services -->
+                </div>
+              </section>
+              <!-- ======./ Services ======  -->
 
             <!-- Packages & Pricing -->
             <div>
