--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <div class="row">
                 <!-- Header -->
                 <div class="col"></div>
-                <div calss="header" class="col" ><h2>Contact Us</h2></div>
+                <div class="col" ><h2>Contact Us</h2></div>
                 <div class="col"></div>
               </div>  
 
@@ -297,12 +297,25 @@
                   <div class="form-group col-md-2"></div>
                 
                 <!--part III-->
-                <div class="form-group col-md-2"></div>
+
+                <div class="form-group col-md-6"><div>
                 <div class="form-group">
-                  <label for="exampleFormControlFile1">Example file input</label>
+                  <label for="exampleFormControlTextarea1">Comments</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div> 
+            </div>
+                <div class="form-row">
+                <div class="form-group col-md-4"></div>
+                <div class="form-group">
+                  <label for="exampleFormControlFile1"><h6>Add a file</h6></label>
                   <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
                 </div>
+              </div>
+            </div>
+                <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+              </div>
+
               </form>
 
 
